Changed background-repeat to repeat-x for module-billboard to prevent background colour from bleeding in at larger widths.

--- a/src/grids/sass/includes/_module.scss
+++ b/src/grids/sass/includes/_module.scss
@@ -72,7 +72,7 @@
 						min-height: 32px;
 						padding: $spacing-medium;
 						text-decoration: none;
-						background-repeat: no-repeat;
+						background-repeat: repeat-x;
 						background-position: 100% 0; //top right;
 						text-shadow: -1px -1px 0 #333, 1px -1px 0 #333, -1px 1px 0 #555, 1px 1px 0 #000;
 						font-weight: 700;
